--- a/palmères/pastyle.css
+++ b/palmères/pastyle.css
@@ -1,93 +1,103 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+/* navbar */
 
+.navbar-title {
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.navbar-title:hover {
+  text-decoration: none;
+  color: #ff881b;
+  opacity: 0.8;
+}
 
 body {
-    margin: 0;
-    padding:0;
-    background: #E5E5E5;
-    font-family: 'Roboto';    
+  margin: 0;
+  padding: 0;
+  background: #e5e5e5;
+  font-family: 'Roboto';
 }
 
 .main-header {
-    background-color: #343b3f;
+  background-color: #343b3f;
 }
 
 .site-title {
-    color: white;
-    margin-left: 1em;
+  color: white;
+  margin-left: 1em;
 }
 
 .menu {
-    flex-basis: 100%;
-    margin: 0;
-    max-height: 0;
-    overflow: hidden;
-    transition: margin .5s ease-in-out, max-height .5s ease-in-out, opacity .3s .1s ease-in-out;
-    visibility: hidden;
-    list-style: none;
-    padding: 0 2em;
-    text-transform: uppercase;
+  flex-basis: 100%;
+  margin: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: margin 0.5s ease-in-out, max-height 0.5s ease-in-out,
+    opacity 0.3s 0.1s ease-in-out;
+  visibility: hidden;
+  list-style: none;
+  padding: 0 2em;
+  text-transform: uppercase;
 }
 
 .menu li {
-    border-bottom: 1px solid #ff881b;
+  border-bottom: 1px solid #ff881b;
 }
 
 .menu li a {
-    display: inline-block;
-    padding: 0.5em 1em;
-    color: white;
-    text-decoration: none;
+  display: inline-block;
+  padding: 0.5em 1em;
+  color: white;
+  text-decoration: none;
 }
 
-
 .menu-checkbox:checked ~ .menu {
-    margin: 1em 0;
-    max-height: none;
-    opacity: 1;
-    visibility: visible;
+  margin: 1em 0;
+  max-height: none;
+  opacity: 1;
+  visibility: visible;
 }
 
 .menu-checkbox {
-    opacity: 0;
-    position: absolute;
-    top: -1000px;
-
+  opacity: 0;
+  position: absolute;
+  top: -1000px;
 }
 
 .menu-checkbox:focus + .menu-toggle {
-    outline: #00A1A1 auto 5px;
+  outline: #00a1a1 auto 5px;
 }
 
 .menu-toggle {
-    padding: .5em .5em;
-    color: white;
-    font-size: 2.5em;
+  padding: 0.5em 0.5em;
+  color: white;
+  font-size: 2.5em;
 }
 
 .nav-wrapper {
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .nav-wrapper {
-    display: flex;
-    
+  display: flex;
 }
 
 /*
 .banniere {
-    position: relative; 
+    position: relative;
     width: 100%;
-    
+
 }
 
 .banniere img {
     width: 100%;
-    
+
 }
 
 .banniere-titre {
@@ -101,10 +111,318 @@ body {
 */
 
 .history-banner {
+  background-image: url('image/podium.jpg');
+  height: 35vh;
+  position: relative;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: var(--section-margin);
+}
+
+.header-title {
+  text-align: center;
+  font-size: 3rem;
+  letter-spacing: 0.3rem;
+  color: white;
+  text-shadow: 2px 3px 6px #141414;
+  font-family: 'Roboto', sans-serif;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-animation: fadein 1s ease-in;
+  -moz-animation: fadein 1s ease-in;
+  animation: fadein 1s ease-in;
+}
+
+.section2 {
+  height: 85em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.card24 {
+  height: 306px;
+  width: 284px;
+  position: static;
+  background: white;
+  border-radius: 10px;
+  display: grid;
+  grid-template-rows: 40% 10% 20% 30%;
+  grid-template-columns: 2fr 2fr;
+}
+
+.cardImg1 {
+  grid-area: 1 / 1 / 2 / 3;
+  background-image: url('../images/race.jpg');
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-size: cover;
+  background-position: 50% 50%;
+  filter: brightness(90%);
+}
+
+.cardImg2 {
+  grid-area: 1 / 1 / 2 / 3;
+  background-image: url('image/united.resized.jpg');
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-size: cover;
+  background-position: bottom;
+  filter: brightness(90%);
+}
+
+.cardImg3 {
+  grid-area: 1 / 1 / 2 / 3;
+  background-image: url('image/aston.resized.jpg');
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-size: cover;
+  background-position: 50% 50%;
+  filter: brightness(90%);
+}
+
+.cardImg4 {
+  grid-area: 1 / 1 / 2 / 3;
+  background-image: url('image/tfsport.resized.jpg');
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-size: cover;
+  background-position: 50% 50%;
+  filter: brightness(90%);
+}
+
+.cardTitle {
+  grid-area: 2 / 1 / 3 / 3;
+  font-size: 8px;
+  font-weight: 300;
+  display: flex;
+  justify-content: center;
+}
+
+.title {
+  margin-top: 0.7em;
+  font-size: 2.1em;
+}
+
+.cardPar {
+  grid-area: 3 / 1 / 4 / 3;
+}
+
+.par1 {
+  line-height: 1.1em;
+  margin-top: 1.3em;
+  margin-left: 1.3em;
+}
+
+.par2 {
+  line-height: 1.1em;
+  margin-top: 1.3em;
+  margin-left: 2.3em;
+}
+
+.par3 {
+  line-height: 1.1em;
+  margin-top: 1.3em;
+  margin-left: 2.5em;
+}
+
+.par4 {
+  line-height: 1.1em;
+  margin-top: 1.3em;
+  margin-left: 2.7em;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.pilot1 {
+  margin-left: 1.6em;
+}
+
+.pilot2 {
+  margin-left: 0.6em;
+}
+
+.pilot3 {
+  margin-left: 1.8em;
+}
+
+.pilot4 {
+  margin-left: 1em;
+}
+
+.cardTours {
+  grid-area: 4 / 1 / 5 / 3;
+  position: static;
+  top: -2%;
+  right: 5%;
+}
+
+.infoTours {
+  margin-left: 1.3em;
+  line-height: 1.3em;
+}
+
+.space {
+  margin-left: 0.5em;
+}
+
+/* footer */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  height: 30vh;
+  background-color: #343b3f;
+}
+
+.footerMenu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+  margin: 0;
+  padding: 1em;
+}
+
+.footerItem {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.footerItem:hover {
+  color: white;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+li {
+  list-style-type: none;
+}
+
+.footerSocialNetworks {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0.6em;
+}
+
+.fa-instagram {
+  color: white;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+}
+
+.fa-instagram:hover {
+  color: white;
+}
+
+.fa-twitter {
+  color: #1da1f3;
+}
+
+.fa-twitter:hover {
+  color: #1da1f3;
+}
+
+.fa-facebook-f {
+  color: #3d5a99;
+}
+
+.fa-facebook-f:hover {
+  color: #3d5a99;
+}
+
+.footerLogo {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  /* navbar */
+  .navbar-title {
+    margin-left: 2em;
+  }
+
+  .navbar-content {
+    margin-left: auto;
+    margin-right: 2em;
+  }
+
+  .menu {
+    flex-basis: auto;
+    margin: 0;
+    max-height: 1000px;
+    opacity: 1;
+    padding: 0;
+    visibility: visible;
+  }
+
+  .menu li {
+    border: none;
+    display: inline-block;
+  }
+
+  .menu li a {
+    padding: 0.5em;
+  }
+
+  .menu-toggle,
+  .menu-checkbox {
+    display: none;
+  }
+
+  .section1 {
+    background: white;
+    height: 30em;
+    overflow: auto;
+  }
+
+  /*
+    .banniere {
+        position: relative;
+        width: 100%;
+
+    }
+
+    .banniere img {
+        width: 100%;
+
+    }
+
+    .banniere-titre {
+        color: white;
+        position: absolute;
+        top: 30%;
+        width: 100%;
+        text-align: center;
+        font-size: 3rem;
+    }
+    */
+
+  .history-banner {
     background-image: url('images/podium.jpg');
-    height: 35vh;
+    height: 100%;
+    width: 100%;
     position: relative;
-    background-position: center;
+    background-position: 0% 17%;
     background-repeat: no-repeat;
     background-size: cover;
     margin-bottom: var(--section-margin);
@@ -127,383 +445,181 @@ body {
     animation: fadein 1s ease-in;
   }
 
-
-.section2 {
-    height: 85em;
+  .section2 {
+    height: 60em;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-}
+  }
 
-.card {
-    height: 306px;
-    width: 284px;
+  .card24 {
+    height: 214px;
+    width: 1098px;
     position: static;
     background: white;
     border-radius: 10px;
     display: grid;
-    grid-template-rows: 40% 10% 20% 30%;
+    grid-template-rows: 15% 30% 55%;
     grid-template-columns: 2fr 2fr;
-}
+  }
 
-.cardImg1 {
-    grid-area: 1 / 1 / 2 / 3;
-    background: url("images/toypalm.resized.jpg");
+  .cardImg1 {
+    grid-area: 1 / 1 / 4 / 2;
+    background-image: url('image/toypalm.resized.jpg');
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0px;
     background-size: cover;
     background-position: 50% 50%;
-    filter: brightness(90%);  
-}
+    filter: brightness(90%);
+  }
 
-.cardImg2 {
-    grid-area: 1 / 1 / 2 / 3;
-    background: url("images/united.resized.jpg");
+  .cardImg2 {
+    grid-area: 1 / 1 / 4 / 2;
+    background-image: url('image/united.resized.jpg');
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0px;
     background-size: cover;
     background-position: bottom;
-    filter: brightness(90%);  
-}
+    filter: brightness(90%);
+  }
 
-.cardImg3 {
-    grid-area: 1 / 1 / 2 / 3;
-    background: url("images/aston.resized.jpg");
+  .cardImg3 {
+    grid-area: 1 / 1 / 4 / 2;
+    background-image: url('image/aston.resized.jpg');
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0px;
     background-size: cover;
     background-position: 50% 50%;
-    filter: brightness(90%);  
-}
+    filter: brightness(90%);
+  }
 
-.cardImg4 {
-    grid-area: 1 / 1 / 2 / 3;
-    background: url("images/tfsport.resized.jpg");
+  .cardImg4 {
+    grid-area: 1 / 1 / 4 / 2;
+    background-image: url('image/tfsport.resized.jpg');
     border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0px;
     background-size: cover;
     background-position: 50% 50%;
-    filter: brightness(90%);  
-}
+    filter: brightness(90%);
+  }
 
-.cardTitle {
-    grid-area: 2 / 1 / 3 / 3;
+  .cardTitle {
+    grid-area: 1 / 2 / 2 / 3;
     font-size: 8px;
     font-weight: 300;
     display: flex;
-    justify-content: center;   
-}
+    justify-content: center;
+  }
 
-.title {
+  .title {
     margin-top: 0.7em;
-    font-size: 2.1em;    
-}
+    font-size: 3em;
+  }
 
-.cardPar {
-    grid-area: 3 / 1 / 4 / 3;
-     
-}
+  .cardPar {
+    grid-area: 2 / 2 / 3 / 3;
+  }
 
-
-.par1 {
+  .par1 {
     line-height: 1.1em;
-    margin-top: 1.3em;
-    margin-left: 1.3em;    
-}
+    margin-top: 1.7em;
+    margin-left: 1.1em;
+    font-size: 1.2em;
+  }
 
-.par2 {
+  .par2 {
     line-height: 1.1em;
-    margin-top: 1.3em;
-    margin-left: 2.3em;    
-}
+    margin-top: 1.7em;
+    margin-left: 1.7em;
+    font-size: 1.2em;
+  }
 
-.par3 {
+  .par3 {
     line-height: 1.1em;
-    margin-top: 1.3em;
-    margin-left: 2.5em;    
-}
+    margin-top: 1.7em;
+    margin-left: 3.1em;
+    font-size: 1.2em;
+  }
 
-.par4 {
+  .par4 {
     line-height: 1.1em;
-    margin-top: 1.3em;
-    margin-left: 2.7em;    
-}
+    margin-top: 1.7em;
+    margin-left: 2.7em;
+    font-size: 1.2em;
+  }
 
-.bold {
+  .bold {
     font-weight: bold;
-}
+  }
 
-.pilot1 {
-    margin-left: 1.6em;
-}
+  .pilot1 {
+    margin-left: 0em;
+  }
 
-.pilot2 {
-    margin-left: 0.6em;
-}
+  .pilot2 {
+    margin-left: 0em;
+  }
 
-.pilot3 {
-    margin-left: 1.8em;
-}
+  .pilot3 {
+    margin-left: 0em;
+  }
 
-.pilot4 {
-    margin-left: 1em;
-}
+  .pilot4 {
+    margin-left: 0em;
+  }
 
-.cardTours {
-    grid-area: 4 / 1 / 5 / 3;
+  .cardTours {
+    grid-area: 3 / 2 / 4 / 3;
     position: static;
-    top: -2%;
-    right: 5%;
-}
+    top: 0%;
+    right: 0%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-.infoTours {
-   margin-left: 1.3em;
-   line-height: 1.3em;   
-}
+  .infoTours {
+    margin-left: 0em;
+    line-height: 1.3em;
+    font-size: 1.2em;
+  }
 
-.space {
+  .space {
     margin-left: 0.5em;
+  }
+  /* footer */
+  footer {
+    flex-direction: row;
+  }
+
+  .footerMenu {
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 33vw;
+    height: 100%;
+  }
+
+  .footerItemSeparator {
+    display: none;
+  }
+
+  .footerSocialNetworks {
+    width: 33vw;
+  }
+
+  .footerLogo {
+    display: block;
+    width: 33vw;
+  }
+
+  .footerLogoImage {
+    height: 20vh;
+    border-radius: 50px;
+  }
 }
-
-
-
-
-@media screen and (min-width: 768px) {
-
-
-    .menu {
-        flex-basis: auto;
-        margin: 0;
-        max-height: 1000px;
-        opacity: 1;
-        padding: 0;
-        visibility: visible;
-    }
-
-    .menu li {
-        border: none;
-        display: inline-block;
-    }
-
-    .menu li a {
-        padding: .5em;
-    }
-
-    .menu-toggle, .menu-checkbox {
-        display: none;
-    }
-
-
-    .section1 {
-        background: white;
-        height: 30em;
-        overflow: auto;
-    }
-    
-    /*
-    .banniere {
-        position: relative; 
-        width: 100%;
-        
-    }
-    
-    .banniere img {
-        width: 100%;
-        
-    }
-    
-    .banniere-titre {
-        color: white;
-        position: absolute;
-        top: 30%;
-        width: 100%;
-        text-align: center;
-        font-size: 3rem;
-    }
-    */
-
-    .history-banner {
-        background-image: url('images/podium.jpg');
-        height: 100%;
-        width: 100%;
-        position: relative;
-        background-position: 0% 17%;
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin-bottom: var(--section-margin);
-        
-      }
-    
-      .header-title {
-        text-align: center;
-        font-size: 3rem;
-        letter-spacing: 0.3rem;
-        color: white;
-        text-shadow: 2px 3px 6px #141414;
-        font-family: 'Roboto', sans-serif;
-        width: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        -webkit-animation: fadein 1s ease-in;
-        -moz-animation: fadein 1s ease-in;
-        animation: fadein 1s ease-in;
-      }
-
-    .section2 {
-        height: 60em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-    }
-
-    .card {
-        height: 214px;
-        width: 1098px;
-        position: static;
-        background: white;
-        border-radius: 10px;
-        display: grid;
-        grid-template-rows: 15% 30% 55%;
-        grid-template-columns: 2fr 2fr;
-    }
-
-    .cardImg1 {
-        grid-area: 1 / 1 / 4 / 2;
-        background: url("images/toypalm.resized.jpg");
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 0px;
-        background-size: cover;
-        background-position: 50% 50%;
-        filter: brightness(90%);  
-    }
-
-    .cardImg2 {
-        grid-area: 1 / 1 / 4 / 2;
-        background: url("images/united.resized.jpg");
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 0px;
-        background-size: cover;
-        background-position: bottom;
-        filter: brightness(90%);  
-    }
-
-    .cardImg3 {
-        grid-area: 1 / 1 / 4 / 2;
-        background: url("images/aston.resized.jpg");
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 0px;
-        background-size: cover;
-        background-position: 50% 50%;
-        filter: brightness(90%);  
-    }
-
-    .cardImg4 {
-        grid-area: 1 / 1 / 4 / 2;
-        background: url("images/tfsport.resized.jpg");
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 0px;
-        background-size: cover;
-        background-position: 50% 50%;
-        filter: brightness(90%);  
-    }
-
-
-
-    .cardTitle {
-        grid-area: 1 / 2 / 2 / 3;
-        font-size: 8px;
-        font-weight: 300;
-        display: flex;
-        justify-content: center;   
-    }
-
-    .title {
-        margin-top: 0.7em;
-        font-size: 3em;    
-    }
-
-    .cardPar {
-        grid-area: 2 / 2 / 3 / 3;    
-    }
-
-    .par1 {
-        line-height: 1.1em;
-        margin-top: 1.7em;
-        margin-left: 1.1em;
-        font-size: 1.2em;    
-    }
-
-    .par2 {
-        line-height: 1.1em;
-        margin-top: 1.7em;
-        margin-left: 1.7em;
-        font-size: 1.2em;    
-    }
-
-    .par3 {
-        line-height: 1.1em;
-        margin-top: 1.7em;
-        margin-left: 3.1em;
-        font-size: 1.2em;    
-    }
-
-    .par4 {
-        line-height: 1.1em;
-        margin-top: 1.7em;
-        margin-left: 2.7em;
-        font-size: 1.2em;    
-    }
-
-    .bold {
-        font-weight: bold;
-    }
-
-    .pilot1 {
-        margin-left: 0em;
-    }
-
-    .pilot2 {
-        margin-left: 0em;
-    }
-
-    .pilot3 {
-        margin-left: 0em;
-    }
-
-    .pilot4 {
-        margin-left: 0em;
-    }
-
-    .cardTours {
-        grid-area: 3 / 2 / 4 / 3;
-        position: static;
-        top: 0%;
-        right: 0%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .infoTours {
-        margin-left: 0em;
-        line-height: 1.3em;
-        font-size: 1.2em;   
-     }
-
-     .space {
-        margin-left: 0.5em;
-    }
-
-    
-        
-
-}
-
